--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [project]
 name = "python-tm1637"
-version = "1.1.3"
+version = "1.1.4"
 description = "Modern, gpiod-based library for TM1637-based LED display modules"
 readme = "README.md"
+license = "MIT"
 license-files = ["LICENSE"]
 authors = [
     { name = "Asadullah Shaikh" }
@@ -13,7 +14,6 @@ classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "Intended Audience :: Education",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: POSIX :: Linux",
     "Programming Language :: Python :: 3",
     "Topic :: Education",
